# everybody-codes

./: .gitignore  Cargo.toml  LICENSE  README.md  helper.nu  overlay.nu  template.rs
ec_2024/: Cargo.toml
ec_2025/: Cargo.toml  visualize_quest15_p3.py
solutions/ec_2025/: Cargo.toml
story_1/: Cargo.toml
story_2/: Cargo.toml
